--- a/post/templates/login.html
+++ b/post/templates/login.html
@@ -1,33 +1,21 @@
-<!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Material Admin</title>
-        
-        <!-- Vendor CSS -->
-        <link href="/static/vendors/bower_components/animate.css/animate.min.css" rel="stylesheet">
-        <link href="/static/vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet">
-            
-        <!-- CSS -->
-        <link href="/static/css/app.min.1.css" rel="stylesheet">
-        <link href="/static/css/app.min.2.css" rel="stylesheet">
-    </head>
-    
+{% extends 'base.html' %}
+{% block body_block %}    
     <body class="login-content">
         <!-- Login -->
-        <div class="lc-block toggled" id="l-login">
+        <div class="lc-block {% if l_block == 'login'%} toggled {% endif %}" id="l-login">
+            <form method="POST">
+            {% csrf_token %}
             <div class="input-group m-b-20">
                 <span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>
                 <div class="fg-line">
-                    <input type="text" class="form-control" placeholder="Username">
+                    <input type="text" class="form-control" placeholder="Username" name="username">
                 </div>
             </div>
             
             <div class="input-group m-b-20">
                 <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
                 <div class="fg-line">
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input type="password" class="form-control" placeholder="Password" name="password">
                 </div>
             </div>
             
@@ -41,53 +29,57 @@
                 </label>
             </div>
             
-            <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
+            <button type="submit" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></button>
             
             <ul class="login-navigation">
                 <li data-block="#l-register" class="bgm-red">Register</li>
                 <li data-block="#l-forget-password" class="bgm-orange">Forgot Password?</li>
             </ul>
+            </form>
         </div>
         
         <!-- Register -->
-        <div class="lc-block" id="l-register">
+        <div class="lc-block {% if l_block == 'signup'%} toggled {% endif %}" id="l-register">
+            <form method="POST" action="/signup">
+            {% csrf_token %}
             <div class="input-group m-b-20">
                 <span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>
                 <div class="fg-line">
-                    <input type="text" class="form-control" placeholder="Username">
+                    <input type="text" class="form-control" placeholder="Username" name="username" required="">
                 </div>
             </div>
             
             <div class="input-group m-b-20">
                 <span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>
                 <div class="fg-line">
-                    <input type="text" class="form-control" placeholder="Email Address">
+                    <input type="email" class="form-control" placeholder="Email Address" name="email" required="">
                 </div>
             </div>
             
             <div class="input-group m-b-20">
                 <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
                 <div class="fg-line">
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input type="password" class="form-control" placeholder="Password" name="password" required="">
                 </div>
             </div>
             
             <div class="clearfix"></div>
             
-            <div class="checkbox">
+<!--             <div class="checkbox">
                 <label>
                     <input type="checkbox" value="">
                     <i class="input-helper"></i>
                     Accept the license agreement
                 </label>
             </div>
-            
-            <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
+ -->            
+            <button class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></button>
             
             <ul class="login-navigation">
                 <li data-block="#l-login" class="bgm-green">Login</li>
                 <li data-block="#l-forget-password" class="bgm-orange">Forgot Password?</li>
             </ul>
+            </form>
         </div>
         
         <!-- Forgot Password -->
@@ -108,7 +100,12 @@
                 <li data-block="#l-register" class="bgm-red">Register</li>
             </ul>
         </div>
-        
+        {% if message %}
+        <div class="login-error-message">
+            <div class="alert alert-danger" role="alert">{{ message }}</div>
+        </div>
+        {% endif %}
+
         <!-- Javascript Libraries -->
         <script src="/static/vendors/bower_components/jquery/dist/jquery.min.js"></script>
         <script src="/static/vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -116,6 +113,7 @@
         <script src="/static/vendors/bower_components/Waves/dist/waves.min.js"></script>
         
         <script src="/static/js/functions.js"></script>
+        <script src="/static/js/fb_post.js"></script>
         
     </body>
-</html>
+{% endblock %}
