revise model post

--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -331,8 +331,8 @@
                 </div>
 
                 <ul class="main-menu">
-                    <li><a href="/Admin/"><i class="zmdi zmdi-home"></i> Queries</a></li>
-                    <li><a href="/Admin/static_page/"><i class="zmdi zmdi-format-underlined"></i> Posts</a></li>
+                    <li><a href="/"><i class="zmdi zmdi-home"></i> Queries</a></li>
+                    <li><a href="/post"><i class="zmdi zmdi-format-underlined"></i> Posts</a></li>
                 </ul>
             </aside>
 
