--- a/post/templates/query.html
+++ b/post/templates/query.html
@@ -1,17 +1,30 @@
-{% extends "base.html" %}
-{% load staticfiles %} 
-
-{% block extra_css %}
-    <link href="/static/vendors/bootgrid/jquery.bootgrid.min.css" rel="stylesheet">
-{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% load staticfiles %} {% block extra_css %}
+<link href="/static/vendors/bootgrid/jquery.bootgrid.min.css" rel="stylesheet"> {% endblock %} {% block content %}
 <div class="container">
     <div class="card">
         <div class="card-header">
             <h2>Query List </h2>
         </div>
-        
+        <div class="card-body card-padding">
+            <form class="row query_form" role="form" method="POST">
+                <div class="col-sm-3">
+                    <div class="form-group fg-line">
+                        <input type="text" class="form-control input-sm" placeholder="New Query" required="" id="q">
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <button type="submit" id="btn-query" class="btn btn-primary btn-sm m-t-5">Search</button>
+                </div>
+                <div class="col-sm-2">
+                <div class="preloader pls-blue hidden query-preloader">
+                    <svg class="pl-circular" viewBox="25 25 50 50">
+                        <circle class="plc-path" cx="50" cy="50" r="20"/>
+                    </svg>
+                </div>
+                </div>
+            </form>
+
+        </div>
         <table id="data-table-command" class="table table-striped table-vmiddle">
             <thead>
                 <tr>
@@ -23,68 +36,48 @@
                 </tr>
             </thead>
             <tbody>
-            {% for item in queries %}
+                {% for item in queries %}
                 <tr>
                     <td>{{item.id}}</td>
                     <td>{{item.query}}</td>
                     <td>{{item.run_at}}</td>
                     <td>{{item.created_at}}</td>
                 </tr>
-            {% endfor %}
+                {% endfor %}
             </tbody>
         </table>
-    </div>              
+    </div>
 </div>
-{% endblock %}
+{% endblock %} {% block extra_js %}
+<script src="/static/vendors/bootgrid/jquery.bootgrid.updated.min.js"></script>
+<script src="/static/js/fb_post.js"></script>
+<!-- Data Table -->
+<script type="text/javascript">
+var csrf_token = '{{ csrf_token }}';
 
-{% block extra_js %}
-    <script src="/static/vendors/bootgrid/jquery.bootgrid.updated.min.js"></script>
-    
-    <!-- Data Table -->
-    <script type="text/javascript">
-        $(document).ready(function(){
-            //Command Buttons
-            var grid = $("#data-table-command").bootgrid({
-                caseSensitive: false,
-                css: {
-                    icon: 'zmdi icon',
-                    iconColumns: 'zmdi-view-module',
-                    iconDown: 'zmdi-expand-more',
-                    iconRefresh: 'zmdi-refresh',
-                    iconUp: 'zmdi-expand-less'
-                },
-                formatters: {
-                    "commands": function(column, row) {
-                        action_html = "<button type=\"button\" class=\"btn btn-icon command-edit waves-effect waves-circle\" data-row-id=\"" + row.id + "\"><span class=\"zmdi zmdi-edit\"></span></button> ";
-                            action_html += "<button type=\"button\" class=\"btn btn-icon command-delete waves-effect waves-circle\" data-row-id=\"" + row.id + "\"><span class=\"zmdi zmdi-delete\"></span></button>";
-                        return action_html;                         
-                    },
-                }
-            }).on("loaded.rs.jquery.bootgrid", function() {
-                /* Executes after data is loaded and rendered */
-                grid.find(".command-edit").on("click", function(e)
-                {
-                    location.href = "/Admin/token/"+$(this).data("row-id")+"/";
-                }).end().find(".command-delete").on("click", function(e) {
-                    var item_id = $(this).data("row-id");
-                    //Warning Message
-                    swal({   
-                        title: "Are you sure?",   
-                        text: "You will not be able to recover this item!",   
-                        type: "warning",   
-                        showCancelButton: true,   
-                        confirmButtonColor: "#DD6B55",   
-                        confirmButtonText: "Yes, delete it!",   
-                        closeOnConfirm: false 
-                    }, function(){   
-                        $.get('/Admin/token/'+item_id+'/delete/')
-                        .success(function(data){
-                            swal({title:"Deleted!", text:"The token has been deleted.", type:"success"}, 
-                                function() { location.href = "/Admin/token/"; });                             
-                        });
-                    });
-                });
-            });
+$(document).ready(function() {
+    //Command Buttons
+    var grid = $("#data-table-command").bootgrid({
+        caseSensitive: false,
+        css: {
+            icon: 'zmdi icon',
+            iconColumns: 'zmdi-view-module',
+            iconDown: 'zmdi-expand-more',
+            iconRefresh: 'zmdi-refresh',
+            iconUp: 'zmdi-expand-less'
+        },
+        formatters: {
+            "commands": function(column, row) {
+                action_html = "<button type=\"button\" class=\"btn btn-icon command-refresh waves-effect waves-circle\" data-row-id=\"" + row.id + "\"><span class=\"zmdi zmdi-refresh\"></span></button> ";
+                return action_html;
+            },
+        }
+    }).on("loaded.rs.jquery.bootgrid", function() {
+        /* Executes after data is loaded and rendered */
+        grid.find(".command-refresh").on("click", function(e) {
+            location.href = "/#/" + $(this).data("row-id") + "/";
         });
-    </script>
+    });
+});
+</script>
 {% endblock %}
