--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -332,7 +332,7 @@
 
                 <ul class="main-menu">
                     <li><a href="/"><i class="zmdi zmdi-home"></i> Queries</a></li>
-                    <li><a href="/post"><i class="zmdi zmdi-format-underlined"></i> Posts</a></li>
+                    <li><a href="/post/all"><i class="zmdi zmdi-format-underlined"></i> Posts</a></li>
                 </ul>
             </aside>
 
