--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -1,35 +1,88 @@
-{% extends 'base.html' %} {% block content %}
+{% extends "base.html" %} {% load staticfiles %} {% block extra_css %}
+<link href="/static/vendors/bootgrid/jquery.bootgrid.min.css" rel="stylesheet"> {% endblock %} {% block content %}
 <div class="container">
-    <div class="block-header">
-        <h2>Dashboard</h2>
-        <ul class="actions">
-            <li>
-                <a href="">
-                    <i class="zmdi zmdi-trending-up"></i>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <i class="zmdi zmdi-check-all"></i>
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="" data-toggle="dropdown">
-                    <i class="zmdi zmdi-more-vert"></i>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                    <li>
-                        <a href="">Refresh</a>
-                    </li>
-                    <li>
-                        <a href="">Manage Widgets</a>
-                    </li>
-                    <li>
-                        <a href="">Widgets Settings</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
+    <div class="card">
+        <div class="card-header">
+            <h2>Post List for Query ({{query}})</h2>
+        </div>
+        <table id="data-table-command" class="table table-striped table-vmiddle">
+            <thead>
+                <tr>
+                    <td data-column-id="id" data-formatter="comment" data-identifier="true">id</td>
+                    <th data-column-id="status_message">message</th>
+                    <th data-column-id="link_name" data-visible="false">link_name</th>
+                    <th data-column-id="status_type">type</th>
+                    <th data-column-id="status_link">url</th>
+                    <th data-column-id="status_published">published</th>
+                    <th data-column-id="num_reactions" data-visible="false">reactions</th>
+                    <th data-column-id="num_comments">comments</th>
+                    <th data-column-id="num_shares">shares</th>
+                    <th data-column-id="num_likes">likes</th>
+                    <th data-column-id="num_loves" data-visible="false">loves</th>
+                    <th data-column-id="num_wows" data-visible="false">wows</th>
+                    <th data-column-id="num_hahas" data-visible="false">hahas</th>
+                    <th data-column-id="num_sads" data-visible="false">sads</th>
+                    <th data-column-id="num_angrys" data-visible="false">angrys</th>
+                    <th data-column-id="commands" data-formatter="commands" data-sortable="false">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in posts %}
+                <tr>
+                    <td>{{item.status_id}}</td>
+                    <td>{{item.status_message}}</td>
+                    <td>{{item.link_name}}</td>
+                    <td>{{item.status_type}}</td>
+                    <td>{{item.status_link}}</td>
+                    <td>{{item.status_published}}</td>
+                    <td>{{item.num_reactions}}</td>
+                    <td>{{item.num_comments}}</td>
+                    <td>{{item.num_shares}}</td>
+                    <td>{{item.num_likes}}</td>
+                    <td>{{item.num_loves}}</td>
+                    <td>{{item.num_wows}}</td>
+                    <td>{{item.num_hahas}}</td>
+                    <td>{{item.num_sads}}</td>
+                    <td>{{item.num_angrys}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
+{% endblock %} {% block extra_js %}
+<script src="/static/vendors/bootgrid/jquery.bootgrid.updated.min.js"></script>
+<script src="/static/js/fb_post.js"></script>
+<!-- Data Table -->
+<script type="text/javascript">
+var csrf_token = '{{ csrf_token }}';
+
+$(document).ready(function() {
+    //Command Buttons
+    var grid = $("#data-table-command").bootgrid({
+        caseSensitive: false,
+        css: {
+            icon: 'zmdi icon',
+            iconColumns: 'zmdi-view-module',
+            iconDown: 'zmdi-expand-more',
+            iconRefresh: 'zmdi-refresh',
+            iconUp: 'zmdi-expand-less'
+        },
+        formatters: {
+            "commands": function(column, row) {
+                action_html = "<button type=\"button\" class=\"btn btn-icon command-edit waves-effect waves-circle\" data-row-id=\"" + row.id + "\"><span class=\"zmdi zmdi-edit\"></span></button> ";
+                return action_html;
+            },
+            "comment": function(column, row) {
+                return "<span class=\"post-id\" post_id=\""+row.id+"\">"+row.id+"</span>";
+            }
+        }
+    }).on("loaded.rs.jquery.bootgrid", function() {
+        /* Executes after data is loaded and rendered */
+        grid.find(".command-edit").on("click", function(e) {
+            location.href = "/post/" + $(this).data("row-id") + "/edit";
+        });
+    });
+});
+</script>
 {% endblock %}
