--- a/post/templates/query.html
+++ b/post/templates/query.html
@@ -29,7 +29,7 @@
             <thead>
                 <tr>
                     <td data-column-id="id" data-identifier="true" data-type="numeric">ID</td>
-                    <th data-column-id="query">Query</th>
+                    <th data-column-id="query" data-formatter="query" >Query</th>
                     <th data-column-id="run_at">Last Updated</th>
                     <th data-column-id="created_at">Created</th>
                     <th data-column-id="commands" data-formatter="commands" data-sortable="false">Action</th>
@@ -71,6 +71,9 @@ $(document).ready(function() {
                 action_html = "<button type=\"button\" class=\"btn btn-icon command-refresh waves-effect waves-circle\" data-row-id=\"" + row.id + "\"><span class=\"zmdi zmdi-refresh\"></span></button> ";
                 return action_html;
             },
+            "query": function(column, row) {
+                return "<a href=\"/post/"+row.query+"\">"+row.query+"</a>";
+            }
         }
     }).on("loaded.rs.jquery.bootgrid", function() {
         /* Executes after data is loaded and rendered */
