--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -32,7 +32,7 @@
                 </li>
 
                 <li class="logo hidden-xs">
-                    <a href="/Admin/" style="height:53px;">
+                    <a href="/" style="height:53px;">
                         <span> Facebook Post & Comment Browse</span>
                     </a>
                 </li>
@@ -50,220 +50,6 @@
                             <a href=""><i class="tm-icon zmdi zmdi-search"></i></a>
                         </li>
 
-                        <li class="dropdown">
-                            <a data-toggle="dropdown" href="">
-                                <i class="tm-icon zmdi zmdi-email"></i>
-                                <i class="tmn-counts">6</i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-lg pull-right">
-                                <div class="listview">
-                                    <div class="lv-header">
-                                        Messages
-                                    </div>
-                                    <div class="lv-body">
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/1.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">David Belle</div>
-                                                    <small class="lv-small">Cum sociis natoque penatibus et magnis dis parturient montes</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/2.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Jonathan Morris</div>
-                                                    <small class="lv-small">Nunc quis diam diamurabitur at dolor elementum, dictum turpis vel</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/3.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Fredric Mitchell Jr.</div>
-                                                    <small class="lv-small">Phasellus a ante et est ornare accumsan at vel magnauis blandit turpis at augue ultricies</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/4.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Glenn Jecobs</div>
-                                                    <small class="lv-small">Ut vitae lacus sem ellentesque maximus, nunc sit amet varius dignissim, dui est consectetur neque</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/4.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Bill Phillips</div>
-                                                    <small class="lv-small">Proin laoreet commodo eros id faucibus. Donec ligula quam, imperdiet vel ante placerat</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <a class="lv-footer" href="">View All</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="dropdown">
-                            <a data-toggle="dropdown" href="">
-                                <i class="tm-icon zmdi zmdi-notifications"></i>
-                                <i class="tmn-counts">9</i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-lg pull-right">
-                                <div class="listview" id="notifications">
-                                    <div class="lv-header">
-                                        Notification
-
-                                        <ul class="actions">
-                                            <li class="dropdown">
-                                                <a href="" data-clear="notification">
-                                                    <i class="zmdi zmdi-check-all"></i>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="lv-body">
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/1.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">David Belle</div>
-                                                    <small class="lv-small">Cum sociis natoque penatibus et magnis dis parturient montes</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/2.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Jonathan Morris</div>
-                                                    <small class="lv-small">Nunc quis diam diamurabitur at dolor elementum, dictum turpis vel</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/3.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Fredric Mitchell Jr.</div>
-                                                    <small class="lv-small">Phasellus a ante et est ornare accumsan at vel magnauis blandit turpis at augue ultricies</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/4.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Glenn Jecobs</div>
-                                                    <small class="lv-small">Ut vitae lacus sem ellentesque maximus, nunc sit amet varius dignissim, dui est consectetur neque</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a class="lv-item" href="">
-                                            <div class="media">
-                                                <div class="pull-left">
-                                                    <img class="lv-img-sm" src="/static/img/profile-pics/4.jpg" alt="">
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="lv-title">Bill Phillips</div>
-                                                    <small class="lv-small">Proin laoreet commodo eros id faucibus. Donec ligula quam, imperdiet vel ante placerat</small>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-
-                                    <a class="lv-footer" href="">View Previous</a>
-                                </div>
-
-                            </div>
-                        </li>
-                        <li class="dropdown hidden-xs">
-                            <a data-toggle="dropdown" href="">
-                                <i class="tm-icon zmdi zmdi-view-list-alt"></i>
-                                <i class="tmn-counts">2</i>
-                            </a>
-                            <div class="dropdown-menu pull-right dropdown-menu-lg">
-                                <div class="listview">
-                                    <div class="lv-header">
-                                        Tasks
-                                    </div>
-                                    <div class="lv-body">
-                                        <div class="lv-item">
-                                            <div class="lv-title m-b-5">HTML5 Validation Report</div>
-
-                                            <div class="progress">
-                                                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-                                                    <span class="sr-only">95% Complete (success)</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="lv-item">
-                                            <div class="lv-title m-b-5">Google Chrome Extension</div>
-
-                                            <div class="progress">
-                                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                                    <span class="sr-only">80% Complete (success)</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="lv-item">
-                                            <div class="lv-title m-b-5">Social Intranet Projects</div>
-
-                                            <div class="progress">
-                                                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                                                    <span class="sr-only">20% Complete</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="lv-item">
-                                            <div class="lv-title m-b-5">Bootstrap Admin Template</div>
-
-                                            <div class="progress">
-                                                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                                    <span class="sr-only">60% Complete (warning)</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="lv-item">
-                                            <div class="lv-title m-b-5">Youtube Client App</div>
-
-                                            <div class="progress">
-                                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                                    <span class="sr-only">80% Complete (danger)</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <a class="lv-footer" href="">View All</a>
-                                </div>
-                            </div>
-                        </li>
                         <li class="dropdown">
                             <a data-toggle="dropdown" href=""><i class="tm-icon zmdi zmdi-more-vert"></i></a>
                             <ul class="dropdown-menu dm-icon pull-right">
@@ -289,9 +75,6 @@
                                     <a href=""><i class="zmdi zmdi-settings"></i> Other Settings</a>
                                 </li>
                             </ul>
-                        </li>
-                        <li class="hidden-xs" id="chat-trigger" data-trigger="#chat">
-                            <a href=""><i class="tm-icon zmdi zmdi-comment-alt-text"></i></a>
                         </li>
                     </ul>
                 </li>
