--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
@@ -39,8 +40,13 @@
 
                 <li class="pull-right">
                     <ul class="top-menu">
+                        <li>
+                            <a href="{% provider_login_url "facebook" %}" class="btn bgm-indigo">
+                                <i class="zmdi zmdi-facebook zmdi-hc-fw"></i> | Connect Facebook Account
+                            </a>
+                        </li>
                         <li id="toggle-width">
-                            <div class="toggle-switch">
+                            <div class="toggle-switch m-l-20">
                                 <input id="tw-switch" type="checkbox" hidden="hidden">
                                 <label for="tw-switch" class="ts-helper"></label>
                             </div>
@@ -116,6 +122,7 @@
                 <ul class="main-menu">
                     <li><a href="/"><i class="zmdi zmdi-home"></i> Queries</a></li>
                     <li><a href="/post/all"><i class="zmdi zmdi-format-underlined"></i> Posts</a></li>
+                    <li><a href="/facebook"><i class="zmdi zmdi-assignment-account zmdi-hc-fw"></i> Manage Accounts</a></li>
                 </ul>
             </aside>
 
