--- a/post/templates/login.html
+++ b/post/templates/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
 {% block body_block %}    
     <body class="login-content">
         <!-- Login -->
@@ -80,6 +81,10 @@
                 <li data-block="#l-forget-password" class="bgm-orange">Forgot Password?</li>
             </ul>
             </form>
+            <a href="{% provider_login_url "facebook" %}" class="btn bgm-indigo">
+                <i class="zmdi zmdi-facebook zmdi-hc-fw"></i> | Connect Facebook Account
+            </a>
+
         </div>
         
         <!-- Forgot Password -->
