add tooltips and fix logo

--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Facebook Post Browse</title>
+        <title>SocialTransmitter</title>
     
         <!-- Vendor CSS -->
         <link href="/static/vendors/bower_components/animate.css/animate.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
 
                 <li class="logo hidden-xs">
                     <a href="/" style="height:53px;">
-                        <span> Facebook Post & Comment Browse</span>
+                        <span> SocialTransmitter</span>
                     </a>
                 </li>
 
@@ -72,9 +72,6 @@
                                     <a data-action="fullscreen" href=""><i class="zmdi zmdi-fullscreen"></i> Toggle Fullscreen</a>
                                 </li>
                                 <li>
-                                    <a data-action="clear-localstorage" href=""><i class="zmdi zmdi-delete"></i> Clear Local Storage</a>
-                                </li>
-                                <li>
                                     <a href=""><i class="zmdi zmdi-face"></i> Privacy Settings</a>
                                 </li>
                                 <li>
@@ -108,10 +105,10 @@
 
                     <ul class="main-menu">
                         <li>
-                            <a href="profile-about.html"><i class="zmdi zmdi-account"></i> View Profile</a>
+                            <a href="#"><i class="zmdi zmdi-account"></i> View Profile</a>
                         </li>
                         <li>
-                            <a href=""><i class="zmdi zmdi-settings"></i> Settings</a>
+                            <a href="#"><i class="zmdi zmdi-settings"></i> Settings</a>
                         </li>
                         <li>
                             <a href="/logout/"><i class="zmdi zmdi-time-restore"></i> Logout</a>
@@ -133,95 +130,6 @@
                         <input type="text" class="form-control" placeholder="Search People">
                     </div>
                 </div>
-
-                <div class="listview">
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/2.jpg" alt="">
-                                <i class="chat-status-busy"></i>
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">Jonathan Morris</div>
-                                <small class="lv-small">Available</small>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/1.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">David Belle</div>
-                                <small class="lv-small">Last seen 3 hours ago</small>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/3.jpg" alt="">
-                                <i class="chat-status-online"></i>
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">Fredric Mitchell Jr.</div>
-                                <small class="lv-small">Availble</small>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/4.jpg" alt="">
-                                <i class="chat-status-online"></i>
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">Glenn Jecobs</div>
-                                <small class="lv-small">Availble</small>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/5.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">Bill Phillips</div>
-                                <small class="lv-small">Last seen 3 days ago</small>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/6.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">Wendy Mitchell</div>
-                                <small class="lv-small">Last seen 2 minutes ago</small>
-                            </div>
-                        </div>
-                    </a>
-                    <a class="lv-item" href="">
-                        <div class="media">
-                            <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="/static/img/profile-pics/7.jpg" alt="">
-                                <i class="chat-status-busy"></i>
-                            </div>
-                            <div class="media-body">
-                                <div class="lv-title">Teena Bell Ann</div>
-                                <small class="lv-small">Busy</small>
-                            </div>
-                        </div>
-                    </a>
-                </div>
             </aside>
             
             <section id="content">
@@ -232,7 +140,7 @@
         </section>
         
         <footer id="footer">
-            Copyright &copy; 2016 Blabla.com
+            Copyright &copy; 2016 socialtransmitter.com
         </footer>
 
         <!-- Page Loader -->
