--- a/static/css/app.min.1.css
+++ b/static/css/app.min.1.css
@@ -10713,10 +10713,10 @@ h6 small,
 
 .profile-menu > a {
   display: block;
-  height: 129px;
+  /*height: 129px;*/
   margin-bottom: 5px;
   width: 100%;
-  background: url(../img/profile-menu.png) no-repeat left top;
+  /*background: url(../img/profile-menu.png) no-repeat left top;*/
   background-size: 100%;
 }
 
