ters of service with tinymce

--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -141,6 +141,7 @@
         
         <footer id="footer">
             Copyright &copy; 2016 socialtransmitter.com
+            <a href="/blog/terms-of-service" class="m-l-30"><b>Terms of Service</b></a>
         </footer>
 
         <!-- Page Loader -->
