--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -18,6 +18,13 @@
         <link href="/static/css/app.min.2.css" rel="stylesheet">
         <link href="/static/css/fb_post.css" rel="stylesheet">
         
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5KPFQF');</script>
+        <!-- End Google Tag Manager -->        
     </head>
 
     {% block body_block %}
@@ -43,6 +50,11 @@
                         <li>
                             <a href="{% provider_login_url "facebook" %}" class="btn bgm-indigo">
                                 <i class="zmdi zmdi-facebook zmdi-hc-fw"></i> | Connect Facebook Account
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/blog/faq" class="btn bgm-teal">
+                                FAQ
                             </a>
                         </li>
                         <li id="toggle-width">
@@ -175,6 +187,10 @@
 
         {% block extra_js %}
         {% endblock %}    
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KPFQF"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->        
     </body>
     {% endblock %}    
 </html>
