--- a/post/templates/comment.html
+++ b/post/templates/comment.html
@@ -19,7 +19,7 @@
                     <th data-column-id="comment_message" data-formatter="message">Message</th>
                     <th data-column-id="comment_author">Author</th>
                     <th data-column-id="comment_published">Published</th>
-                    <th data-column-id="comment_likes" data-visible="false">Likes</th>
+                    <th data-column-id="comment_likes" data-type="numeric" data-visible="false">Likes</th>
                     <th data-column-id="commands" data-formatter="commands" data-sortable="false">Action</th>
                 </tr>
             </thead>
@@ -56,6 +56,7 @@ $(document).ready(function() {
             iconRefresh: 'zmdi-refresh',
             iconUp: 'zmdi-expand-less'
         },
+        rowCount: [-1, 20, 50, 100],
         formatters: {
             "commands": function(column, row) {
                 action_html = "<button type=\"button\" class=\"btn btn-icon command-edit waves-effect waves-circle\" data-row-id=\"" + row.id + "\"><span class=\"zmdi zmdi-edit\"></span></button> ";
