--- a/static/css/app.min.1.css
+++ b/static/css/app.min.1.css
@@ -15254,8 +15254,11 @@ a.thumbnail.active {
 }
 
 .login-navigation > li:not(:hover) {
-  font-size: 0px;
+/*  font-size: 0px;
   border-radius: 100%;
+*/  border-radius: 10px;
+  padding: 0 5px;
+  font-size: 8px;
 }
 
 .login-navigation > li:hover {
